--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="colorCursorSupervisores">#ff9100</color>
 
 
+    <color name="colorCursorSupervisoresNuevoEvento">#ffff</color>
+
 </resources>
 
 
