--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -237,7 +237,7 @@
 
                         android:id="@+id/btn_ver_detalle_item_evento"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="85dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
@@ -247,13 +247,52 @@
                         android:drawableLeft="@drawable/ic_detalle_stock_vehiculo"
                         android:gravity="center"
                         android:paddingLeft="30dp"
-                        android:text="VER DETALLE"
+                        android:text="VER EVENTO"
                         android:textColor="#FFFF"
                         android:textSize="25sp"
                         android:textStyle="bold" />
 
 
                 </LinearLayout>
+
+
+
+
+                <LinearLayout
+
+                    android:id="@+id/llh_btn_ver_datos_personales_evento_responsable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+                    <Button
+
+                        android:id="@+id/btn_ver_datos_personales_item_evento"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/contenedor_boton_detalle_stock_vehiculo"
+                        android:backgroundTint="#ff3d00"
+                        android:drawableLeft="@drawable/ic_ver_datos_personales_responsable"
+                        android:gravity="center"
+                        android:paddingLeft="30dp"
+                        android:text="VER RESPONSABLE"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+
+
 
 
             </LinearLayout> <!-- FIN DEL llv_contenedor_hijo_de_envases -->
