--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,19 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
     <style name="AppTheme.Cursor" parent="AppTheme">
         <item name="colorAccent">#ff9100</item>
+    </style>
+
+
+    <style name="AppTheme.CursorNuevoEvento" parent="AppTheme">
+        <item name="colorAccent">#ffff</item>
     </style>
 
 
