Datos_Personales_Responsable
1)La edición se llevará a cabo en esa activity
2)Falta ver porque al presionar el boton "atras" borra un item.

--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -283,7 +283,7 @@
                         android:drawableLeft="@drawable/ic_ver_datos_personales_responsable"
                         android:gravity="center"
                         android:paddingLeft="30dp"
-                        android:text="VER RESPONSABLE"
+                        android:text="VER Y/O EDITAR RESPONSABLE"
                         android:textColor="#FFFF"
                         android:textSize="25sp"
                         android:textStyle="bold" />
