Primer caracter campos nombres y apellido NUEVORESPONSABLEPATRO. EXIT
En el XML, más precisamente en el inputtype se han agregado 2 opciones

--- a/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
+++ b/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
@@ -229,11 +229,11 @@
                         android:gravity="center"
                         android:hint="(Obligatorio)"
                         android:imeOptions="actionNext"
-                        android:inputType="textMultiLine"
+                        android:inputType="textAutoCorrect|textCapWords"
                         android:maxLength="45"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:textCursorDrawable="@color/colorCursorSupervisores"/>
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
@@ -306,11 +306,11 @@
                         android:gravity="center"
                         android:hint="(Obligatorio)"
                         android:imeOptions="actionNext"
-                        android:inputType="textMultiLine"
+                        android:inputType="textAutoCorrect|textCapWords"
                         android:maxLength="45"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:textCursorDrawable="@color/colorCursorSupervisores"/>
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
