Patrocinio casi terminado --- Comienzo del MAPA SUPERVISORES
*) De patrocinio falta: 
1-Cambiar color enabled evento cuando se agrega una nueva vuelta programaticamente con el boton flotante.

2) Cargar los nombres y apellidos de cada responsable en un ListView para encontrarlos en el Buscador de responsables.

------
*) Comienzo del Mapa: se creó una mapa con mapbox, se añadieron marcadores, se los customizó. Se ha obtenido a modo de prueba las coordenadas GPS de un telefono celular (Jota pe) y lo muestra en pantalla en tiempo real

--- a/app/src/main/res/menu/menu_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/menu/menu_entrega_retiro_envases_patrocinio.xml
@@ -29,6 +29,12 @@
         app:showAsAction="never" />
 
 
+    <item
+        android:id="@+id/action_avaible_evento"
+        android:orderInCategory="100"
+        android:title="@string/action_avaible_evento"
+        app:showAsAction="never" />
+
 
 
 </menu>
