Ultimo Commit antes de la Prueba GeoJson
Cambios hechos:
1) se ha quitado la pestaña de "mapa"
2) se ha añadido un mapa de repartidores con navigatión
3) Se añadió un mapa para supervisores.

--- a/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
+++ b/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
@@ -12,7 +12,7 @@
     tools:context=".RealizarVentasClientesSupervisor">
 
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
 
         android:id="@+id/toolbar_ventas_supervisor"
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
         android:background="#d50000"
         app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Body1">
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
 
     <ScrollView
