--- a/app/src/main/res/layout/activity_opciones_estadisticas.xml
+++ b/app/src/main/res/layout/activity_opciones_estadisticas.xml
@@ -2,15 +2,16 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginRight="0dp"
+    android:layout_marginBottom="0dp"
+    android:background="#d50000"
     android:orientation="vertical"
     android:weightSum="2"
 
@@ -32,6 +33,8 @@
             android:id="@+id/llv_uno_punto_uno"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:orientation="vertical"
@@ -44,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="#ff3d00"
+                android:background="#FFFF"
                 android:src="@mipmap/ic_comision_128px" />
 
 
@@ -55,10 +58,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="#ff3d00"
+                android:background="#FFFF"
                 android:gravity="center|top"
                 android:text="COMISIONES"
-                android:textColor="#FFFF"
+                android:textColor="#d50000"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -71,9 +74,11 @@
             android:id="@+id/llv_uno_punto_dos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:background="#ff3d00"
+            android:background="#FFFF"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -84,7 +89,7 @@
                 android:layout_height="300dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:backgroundTint="#ff3d00"
+                android:backgroundTint="#FFFF"
                 android:src="@mipmap/gasolinera_estadisticas_128px" />
 
 
@@ -94,10 +99,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#ff3d00"
+                android:background="#FFFF"
                 android:gravity="center"
                 android:text="GASTO EN COMBUSTIBLE"
-                android:textColor="#FFFF"
+                android:textColor="#d50000"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -107,20 +112,15 @@
     </LinearLayout>
 
 
-
-
     <!--#################################################################-->
-
-
-
 
 
     <LinearLayout
 
-        android:layout_weight="1"
         android:id="@+id/llh_2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
 
@@ -129,6 +129,8 @@
             android:id="@+id/llv_dos_punto_uno"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="2">
@@ -140,8 +142,8 @@
                 android:layout_height="400dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="#ff3d00"
-                android:src="@mipmap/bidon_azul_128px">
+                android:background="#FFFF"
+                android:src="@mipmap/bidon_128px">
 
             </ImageButton>
 
@@ -152,10 +154,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="#ff3d00"
+                android:background="#FFFF"
                 android:gravity="center"
                 android:text="VENTA DE BIDONES"
-                android:textColor="#FFFF"
+                android:textColor="#d50000"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -165,21 +167,23 @@
 
         <LinearLayout
 
-            android:layout_weight="1"
             android:id="@+id/llv_dos_punto_dos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="2"
-            android:orientation="vertical">
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:weightSum="2">
 
 
             <ImageButton
                 android:id="@+id/img_btn_frecuencia_llamadas_clientes"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:layout_weight="1"
-                android:background="#ff3d00"
-                android:src="@drawable/ic_main_mapa">
+                android:background="#FFFF"
+                android:src="@mipmap/people_drinking_water">
 
             </ImageButton>
 
@@ -190,10 +194,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#ff3d00"
+                android:background="#FFFF"
                 android:gravity="center"
-                android:text="FRECUENCIA DE LLAMADAS DE CLIENTES"
-                android:textColor="#FFFF"
+                android:text="FRECUENCIA DE CONSUMO"
+                android:textColor="#d50000"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -201,29 +205,7 @@
         </LinearLayout>
 
 
-
-
     </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </LinearLayout>
