--- a/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
+++ b/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
@@ -9,7 +9,7 @@
         android:id="@+id/search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/hint_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView"
         android:orderInCategory="1"/>
 
