--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -27,6 +27,37 @@
 
     <style name="AppTheme.CursorNuevoEvento" parent="AppTheme">
         <item name="colorAccent">#ffff</item>
+    </style>
+
+
+    <style name="NavigationMapRoute">
+        <!-- Colors -->
+        <item name="routeColor">@color/mapbox_navigation_route_layer_blue</item>
+        <item name="routeModerateCongestionColor">
+            @color/mapbox_navigation_route_layer_congestion_yellow
+        </item>
+        <item name="routeSevereCongestionColor">
+            @color/mapbox_navigation_route_layer_congestion_red
+        </item>
+        <item name="routeShieldColor">@color/mapbox_navigation_route_shield_layer_color</item>
+        <!-- Scales -->
+        <item name="routeScale">1.0</item>
+    </style>
+
+    <style name="NavigationView" parent="Theme.AppCompat.NoActionBar">
+        <item name="navigationViewPrimary">@color/mapboxWhite</item>
+        <item name="navigationViewSecondary">@color/mapboxBlue</item>
+        <item name="navigationViewAccent">@color/mapboxPink</item>
+    </style>
+
+
+    <style name="MyCustomTheme" parent="NavigationViewLight">
+        <item name="navigationViewPrimary">
+            @color/mapbox_navigation_route_alternative_congestion_red
+        </item>
+        <item name="navigationViewSecondary">@color/mapbox_navigation_route_layer_blue</item>
+        <!-- Map style URL -->
+        <item name="navigationViewMapStyle">@string/navigation_guidance_day</item>
     </style>
 
 
